infra/kubernetes/deployment-homolog.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cst-backend
  namespace: cst
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cst-backend
  template:
    metadata:
      labels:
        app: cst-backend
    spec:
      containers:
        - name: cst-backend-container
          image: ghcr.io/oondemand/cst-backend:${IMAGE_TAG}-homolog
          ports:
            - containerPort: 4000
          resources:
            requests:
              memory: "512Mi"
              cpu: "0.5"
            limits:
              memory: "2048Mi"
              cpu: "2"
