infra/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: esteira-de-servicos-backend-service
  namespace: esteira-de-servicos
spec:
  type: LoadBalancer
  selector:
    app: esteira-de-servicos-backend
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 4000
